--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "19.6.0+1"
 [deps]
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
+alsa_jll = "45378030-f8ea-5b20-a7c7-1a9d95efb90e"
 
 [compat]
 julia = "1.0"
